--- a/DLL_Objetos/DLL_Objetos.csproj
+++ b/DLL_Objetos/DLL_Objetos.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Check_IO.cs" />
     <Compile Include="Check_Out.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Funcionario.cs" />
     <Compile Include="Pessoa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quarto.cs" />
