--- a/DLL_Regras/DLL_Regras.csproj
+++ b/DLL_Regras/DLL_Regras.csproj
@@ -37,6 +37,9 @@
     <Reference Include="DLL_Objetos">
       <HintPath>..\DLL_Dados\bin\Debug\DLL_Objetos.dll</HintPath>
     </Reference>
+    <Reference Include="Exceptions">
+      <HintPath>..\Exceptions\bin\Debug\Exceptions.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
